...
      body: Padding(
        padding: const EdgeInsets.all(16.0),
        child: Column(
          crossAxisAlignment: CrossAxisAlignment.start,
          children: [
            Text(
              "Welcome, ${_fullName ?? 'User'}",
              key: const Key('welcomeText'), // المفتاح المضاف
              style: TextStyle(fontSize: 24),
            ),

            SizedBox(height: 16),
            TextField(
...
